package access;

public interface GymAccess {
    void useGym(String memberType) throws Exception;
}
