//package access;
//import javax.swing.*;
//
//public class NoGymEntry implements GymAccess {
//    @Override
//    public void useGym() {
//        JOptionPane.showMessageDialog(null, "This customer cannot enter the gym", "No Entry", JOptionPane.ERROR_MESSAGE);
//    }
//}

