//package access;
//import javax.swing.*;
//
//public class NoPoolEntry implements PoolAccess{
//    @Override
//    public void usePool(){
//        JOptionPane.showMessageDialog(null, "This customer cannot access the pool", "No Entry", JOptionPane.ERROR_MESSAGE);
//    }
//}
