package access;

public interface PoolAccess {
    void usePool(String memberType) throws Exception;
}
